--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -20,3 +20,13 @@ jobs:
           path: |
             '**.dart'
             README.md
+  deployment:
+    runs-on: ubuntu-latest
+    needs: delivery
+    steps:
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: projetozipado.zip
+      - name: Display structure of downloaded files
+        run: ls -R
