Update continuousdelivery.yml (#4)

--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           name: projetozipado.zip
           path: |
-            '**.dart'
+            '**.dart
             README.md
   deployment:
     runs-on: ubuntu-latest
