--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           name: projetozipado.zip
           path: |
-            '**.dart
+            **.dart
             README.md
