--- a/.github/workflows/continuousdelivery.yml
+++ b/.github/workflows/continuousdelivery.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Simulando continous delivery
         uses: actions/upload-artifact@v4
         with:
-          name: projetozipado.zip
+          name: projetozipado
           path: |
             '**.dart
             README.md
@@ -27,6 +27,6 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: projetozipado.zip
+          name: projetozipado
       - name: Display structure of downloaded files
         run: ls -R
